@startuml
entity Usuario {
    ID int primary key
    Nombre varchar
    Apellido varchar
    Email varchar
    Balance decimal
    Autenticacion varchar
}

entity Banco {
    ID int primary key
    Nombre varchar
    Cuenta varchar
    Usuario_ID int
}

entity Exchange {
    ID int primary key
    Nombre varchar
    API_Key varchar
    Secret_Key varchar
}

entity Bot {
    ID int primary key
    Usuario_ID int
    Exchange_ID int
    Activo_ID int
    Estrategia_ID int
}

entity Estrategia {
    ID int primary key
    Nombre varchar
    Descripcion text
    Parametros text
}

entity Activo {
    ID int primary key
    Nombre varchar
    Simbolo varchar
    Tipo varchar
}

entity Operacion {
    ID int primary key
    Bot_ID int
    Activo_ID int
    TipoOperacion varchar  // "Compra" o "Venta"
    Precio decimal
    Cantidad decimal
    Fecha datetime
}

Usuario ||--o{ Banco : tiene
Usuario ||--o{ Bot : controla
Bot }o--|| Usuario : pertenece
Bot }o--|| Exchange : opera
Bot }o--|| Activo : opera
Bot }o--|| Estrategia : utiliza
Bot ||--o{ Operacion : realiza
Activo ||--o{ Operacion : está_involucrado

@enduml
